# User_Service

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db
adapters/: main.py
adapters/static/: login.css  users.css
adapters/templates/: users.html
core/entities/: responses.py  token.py  users.py
core/use_cases/: users.py
infrastructure/: database.py
rest_api/: config.py  database.py  main.py
rest_api/models/: responses.py  token.py  users.py
rest_api/services/: email.py  smtp.py  users.py
rest_api/templates/: login.html
tests/: bdd_create.py  bdd_delete.py  bdd_get.py  bdd_tests.py  bdd_update.py  config.py  get_user.feature  get_user.py  get_user3.py  register_user.py  registration.py  test_registration.py  test_registration2.py  test_registration3.py
tests/features/: bdd_create.feature  bdd_get.feature  bdd_tests.feature  bdd_update.feature  get_user.feature  register_user.feature  registration.feature
