[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = ""
authors = ["Alper Cetin <alper8540@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.7"
databases = "^0.9.0"
asyncpg = "^0.27.0"
pydantic = "^1.10.17"
psycopg2-binary = "^2.9.0"
python-dotenv = "^0.21.0"
jinja2 = "^3.0.0"
python-multipart = "^0.0.5"
aiosmtplib = "^1.1.4"
passlib = "^1.7.4"
python-jose = "^3.3.0"
PyJWT = "^2.4.0"
httpx = "^0.23.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-bdd = "^4.0.2"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
